add unwrap? option to pipelines